# sqlite3_hyperminhash

./: .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  demo.py  demo_serialize.py  wrapper.h
src/: lib.rs  serialize.rs  shim.c
tests/: hmh.rs  serialize.rs  util.rs
