[package]
name = "sqlite3_hyperminhash"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
hyperminhash = "0.1"

[dev-dependencies]
rusqlite = "0.18"
rand = "0.6"

[build-dependencies]
cc = "1"
bindgen = { version = "0.49", default_features = false }
pkg-config = "0.3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
serialize = ["hyperminhash/serialize"]
