[package]
name = "sqlite3_hyperminhash"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
hyperminhash = "0.1"

[dev-dependencies]
rusqlite = "0.27"
rand = "0.8"

[build-dependencies]
cc = "1"
bindgen = { version = "0.60", default_features = false, features = ["runtime"] }
pkg-config = "0.3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
serialize = ["hyperminhash/serialize"]
